# litmus

./: .dockerignore  .env  Dockerfile  Dockerfile.streamlit  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
airflow/dags/: __init__.py  drift_detection_dag.py  quality_check_dag.py
alembic/: env.py
alembic/versions/: 20241207_000000_initial_schema.py  20241207_000001_add_trigger_type_to_runs.py
docs/: executive-technical-overview.md  local-lambda-testing.md  quick-reference.md  user-onboarding.md
infrastructure/docker/: init-db.sql  localstack-init.sh  loki-config.yml  prometheus.yml
infrastructure/docker/grafana/dashboards/: drift_overview.json  quality_overview.json
infrastructure/docker/grafana/provisioning/dashboards/: dashboards.yml
infrastructure/docker/grafana/provisioning/datasources/: datasources.yml
infrastructure/scripts/: setup_snowflake_sample_data.sh
lambda/: __init__.py  baseline_handler.py  drift_handler.py  quality_handler.py
reports/550e8400-e29b-41d4-a716-446655440000/550e8400-e29b-41d4-a716-446655440002/reports/drift/: 2ad98efb-4852-49f2-9d96-7d7c465e5cea.html  7e23f6d0-c516-4e0c-9860-42bf76728efa.html
scripts/: lambda_local.py  setup_test_data.py  test_snowflake_localstack.py
src/chalkandduster/: __init__.py  main.py
src/chalkandduster/alerting/: __init__.py  slack.py
src/chalkandduster/api/: __init__.py  deps.py
src/chalkandduster/api/routes/: __init__.py  connections.py  datasets.py  health.py  html_reports.py  llm.py  reports.py  runs.py  tenants.py
src/chalkandduster/api/schemas/: __init__.py  common.py  connection.py  dataset.py  llm.py  tenant.py
src/chalkandduster/connectors/: __init__.py  secrets.py  snowflake.py
src/chalkandduster/core/: __init__.py  config.py  exceptions.py  logging.py  schemas.py
src/chalkandduster/db/: __init__.py
src/chalkandduster/db/postgres/: __init__.py  crud.py  models.py  session.py
src/chalkandduster/db/snowflake/: __init__.py  connector.py
src/chalkandduster/drift/: __init__.py  baseline_storage.py  detector.py  evidently_detector.py  factory.py  models.py  statistical.py
src/chalkandduster/llm/: __init__.py  alert_enhancer.py  client.py  drift_explainer.py  prompts.py  yaml_generator.py
src/chalkandduster/observability/: __init__.py  metrics.py
src/chalkandduster/orchestration/: __init__.py  airflow_engine.py  base.py  factory.py  lambda_engine.py
src/chalkandduster/quality/: __init__.py  executor.py  factory.py  great_expectations_executor.py  models.py  validator.py
src/chalkandduster/reports/: __init__.py  generators.py  storage.py
streamlit_app/: __init__.py  app.py
streamlit_app/handlers/: __init__.py  confirmation.py  connection.py  dataset.py  drift.py  quality.py  tenant.py  types.py  utils.py
streamlit_app/pages/: __init__.py  chat.py  dashboard.py  settings.py
streamlit_app/utils/: __init__.py  database.py  llm_chat.py
tests/: __init__.py  conftest.py
tests/events/: baseline_event.json  quality_event.json
tests/test_api/: __init__.py  test_health.py  test_tenants.py
tests/test_drift/: __init__.py  test_statistical.py
tests/test_llm/: __init__.py  test_yaml_generator.py
tests/test_quality/: __init__.py  test_validator.py
(+3 files in other folders)
